shekoofeh-shojai-classA

--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -16,3 +16,13 @@ header{
 
 
 }
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+    padding: 20px 7%;
+}
+.logo{
+    
+}
