--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -17,6 +17,7 @@ header{
 
 }
 
+/* NAV */
 nav{
     display: flex;
     align-items: center;
@@ -24,5 +25,46 @@ nav{
     padding: 20px 7%;
 }
 .logo{
-    
+    width: 140x;
+    cursor: pointer;
+}
+.nav-links li{
+
+    list-style: none;
+    display: inline-block;
+    margin: 10px 30px;
+}
+
+
+.nav-links li a{
+
+    text-decoration: none;
+    color: #fff;
+}
+.register-btn{
+    background: #fff;
+    color:#000 ;
+    border-radius: 20px;
+    padding: 8px 20px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.continer{
+    padding: 0  7%;
+   
+}
+header h1{
+    font-size: 4vw;
+    font-weight: 500;
+    color: #fff;
+    text-align: center;
+    padding-top: 22%;
+}
+.serch-bar{
+    background: #fff;
+    width:70%;
+    margin: 30px auto;
+    padding: 6px 10px 6px 30px;
+    border-radius: 50px;
 }
