--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -63,8 +63,45 @@ header h1{
 }
 .serch-bar{
     background: #fff;
-    width:70%;
+    width:78%;
     margin: 30px auto;
     padding: 6px 10px 6px 30px;
     border-radius: 50px;
+}
+               
+.serch-bar  form{
+
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.serch-bar  input{
+
+    display: block;
+    border: 0;
+    outline:none;
+    background: transparent;
+}
+.serch-bar form button{
+
+    background: #ff5361;
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+}
+.serch-bar form button img{
+    width: 15px;
+    margin-top:7px;
+}
+.location-input {
+    
+     flex:1;
+}
+.location-input form label{
+  
+   font-weight: 600;
 }
