--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -2,8 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-
+    /* font-family:Verdana, Geneva, Tahoma, sans-serif; */
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 header{
    min-height: 100vh;
@@ -41,6 +41,8 @@ nav{
     text-decoration: none;
     color: #fff;
 }
+
+/* serch-box */
 .register-btn{
     background: #fff;
     color:#000 ;
@@ -63,7 +65,7 @@ header h1{
 }
 .serch-bar{
     background: #fff;
-    width:78%;
+    width:70%;
     margin: 30px auto;
     padding: 6px 10px 6px 30px;
     border-radius: 50px;
@@ -101,7 +103,51 @@ header h1{
     
      flex:1;
 }
-.location-input form label{
+.serch-bar form label {
   
-   font-weight: 600;
+   font-weight: 500;
+   
 }
+
+/* 
+
+--------------------------main 
+*/
+
+.sub-title{
+    margin: 50px 0 20px;
+    font-size: 2.2vw;
+    font-weight: 500;
+    color: #333;
+}
+.Exclusives{
+    
+    display: grid;
+     grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    grid-gap: 30px; 
+    /* display: flex; */
+   
+}
+.Exclusives picture img{
+     width: 90%;
+    border-radius: 10px;
+}
+.Exclusives picture{
+    position: relative;
+}
+.Exclusives picture span{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
+    color: #fff;
+}
+
+
+
+/* 
+
+----------------------trening Places
+*/
+
