--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -138,8 +138,8 @@ header h1{
 .Exclusives picture span{
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+    left:50%;
+    transform: translate(-60%,-50%);
     text-align: center;
     color: #fff;
 }
@@ -163,3 +163,33 @@ header h1{
     width: 100%;
     border-radius: 10px;
 }
+
+/* 
+
+///////////////////////////////cta
+
+*/
+.cta{
+    margin: 80px 0;
+    background-image: linear-gradient(to right, #3f2321,transparent)
+    ,url(./images/banner-2.png);
+    background-size: cover;
+    background-position: center;
+    padding: 5%;
+    color: #fff;
+}
+.cta h3{
+
+    font-size: 4vw;
+    line-height: 5.3vw;
+    font-weight: 500;
+}
+
+.cta p{
+
+    font-size: 18px;
+   margin: 10px 0;
+}
+
+
+
