shekoofeh-shojai-classA

--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -190,6 +190,70 @@ header h1{
     font-size: 18px;
    margin: 10px 0;
 }
+.cta-btn{
+    background: #ff5361;
+    color: #fff;
+    text-decoration: none;
+    padding: 12px 30px ;
+    border-radius: 8px;
+    margin-top: 20px;
+    display: inline-block;
+}
+/* 
+-------------------------traveles stories
+*/
+.stories{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    grid-gap: 30px; 
+    margin-bottom: 30px;
+}
 
 
+.stories picture img{
 
+    width: 100%;
+    border-radius: 10px;
+}
+.stories picture{
+    position: relative;
+    text-align: center;
+}
+.stories picture p{
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    color: #fff;
+    font-size: 26px;
+}
+.start-btn{
+    text-decoration: none;
+    background:#ff5361;
+    display: block;
+    width: 80%;
+    color: #fff;
+    max-width: 350px;
+    text-align: center;
+    margin: 60px auto;
+    padding: 15px;
+    border-radius: 30px;
+    font-size: 20px;
+}
+
+/* 
+/////////////////////About-Mssg
+*/
+
+.about-mssg{
+    text-align: center;
+    margin: 80px 0;
+    color: #333;
+    font-size: 17px;
+}
+.about-mssg h2{
+    font-size: 28px;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
