--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -257,3 +257,144 @@ header h1{
     margin-bottom: 30px;
     font-weight: 500;
 }
+
+/* 
+////////////////////////footer
+
+*/
+
+footer{
+    margin: 80px 0 10px;
+    text-align: center;
+
+}
+footer a{
+    text-decoration: none;
+    counter-reset: #999;
+    font-size: 22px;
+    margin: 0 10px;
+}
+footer hr{
+    background: #999;
+    height: 1px;
+    width: 100%;
+    border: 0;
+    margin: 20px 0;
+}
+
+.active{
+    position: relative;
+}
+.active::after{
+   content: '';
+   background: #fff;
+   width: 25px;
+   height: 2px;
+   position: absolute;
+   left: 50%;
+   transform: translateX(-50%);
+   bottom: -12px;
+   border-radius: 2px;
+}
+nav .fa-bars{
+    display: none;
+}
+/* for small screen */
+
+@media only screen and (max-width:700px){
+    .logo{
+        position: fixed;
+        top:4%;
+        left:7%;
+    }
+     nav{
+        position: fixed;
+         top: 0;
+        z-index: 100;
+         display: inline-block;
+        width: 100%;
+        padding: 100px 7% 0;
+        background: #000;
+        text-align: right;
+        max-height: 100px;
+        overflow: hidden;
+        transition: max-height 0.5s;
+    }
+    nav .nav-links li{ 
+        margin: 10px 0;
+        display: block;
+    }
+    .register-btn{
+        margin: 15px 0 30px;
+    }
+    nav .fa-bars{
+    display:block;
+    position: fixed;
+    top: 4%;
+    right: 7%;
+    color: #fff;
+    font-size: 28px;
+    cursor: pointer;
+   }
+   .active::after{
+   
+   left: -40px;
+   transform: translate(0,50%);
+   bottom: 50%;
+ 
+}
+.hidemenu{
+    max-height: 300px;
+}
+header h1{
+    padding-top: 200px;
+    font-size: 7vw;
+}
+.serch-bar{
+    width: 90%;
+    margin: 30px auto;
+    padding: 20px 10px 30px ;
+    border-radius: 5px;
+    position: relative;
+}
+.serch-bar form{
+  display: block;
+  width: 100%;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  padding-bottom: 10px;
+}
+.serch-bar form button{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%,50%);
+}
+.sub-title{
+    font-size: 6vw;
+}
+.cta{
+    padding: 15% 5%;
+}
+
+.cta h3{
+   font-size: 7vw;
+   line-height: 8vw;
+}
+
+.cta p{
+   font-size: 14px;
+}
+.cta-btn{
+    padding: 6px 15px;
+    border-radius: 4px;
+    margin-top: 10px;
+    font-size: 14px;
+}
+.stories p{
+    font-size: 22px;
+}
+.about-mssg{
+    font-size: 15px;
+}
+}
