--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -301,10 +301,10 @@ nav .fa-bars{
 }
 /* for small screen */
 
-@media only screen and (max-width:700px){
+@media only screen and (max-width:800px){
     .logo{
         position: fixed;
-        top:4%;
+        top:2%;
         left:7%;
     }
      nav{
@@ -321,12 +321,18 @@ nav .fa-bars{
         transition: max-height 0.5s;
     }
     nav .nav-links li{ 
-        margin: 10px 0;
+        margin: 15px 0;
         display: block;
+        font-size: 20px;
     }
     .register-btn{
         margin: 15px 0 30px;
+        display: inline-block;
     }
+
+  
+
+
     nav .fa-bars{
     display:block;
     position: fixed;
@@ -338,9 +344,10 @@ nav .fa-bars{
    }
    .active::after{
    
-   left: -40px;
-   transform: translate(0,50%);
-   bottom: 50%;
+   /* left: 10px; */
+   color: #fff;
+   transform: translate(-50%,60%);
+   /* bottom: 0%; */
  
 }
 .hidemenu{
