--- a/Websit with html css/style.css
+++ b/Websit with html css/style.css
@@ -25,7 +25,7 @@ nav{
     padding: 20px 7%;
 }
 .logo{
-    width: 140x;
+    width: 140px;
     cursor: pointer;
 }
 .nav-links li{
@@ -270,7 +270,7 @@ footer{
 }
 footer a{
     text-decoration: none;
-    counter-reset: #999;
+    color: #999;
     font-size: 22px;
     margin: 0 10px;
 }
@@ -304,7 +304,7 @@ nav .fa-bars{
 @media only screen and (max-width:800px){
     .logo{
         position: fixed;
-        top:2%;
+        top:4%;
         left:7%;
     }
      nav{
@@ -404,4 +404,79 @@ header h1{
 .about-mssg{
     font-size: 15px;
 }
+}
+
+
+
+
+/*///////////////
+ websiteTwo 
+ ////////////////*/
+
+ .navbar-white{
+ background: #fff;
+ box-shadow: 0 5px 10px rgba(0,0,0,0.5);
+
+ }
+ .navbar-white .nav-links li a{
+     color: #000;
+ }
+
+ .navbar-white .register-btn{
+     background: #ff5361;
+     color: #fff;
+ }
+  .navbar-white .fa-bars{
+      color: #000;
+  }
+
+  .navbar-white .active::after{
+      background: #ff5361;
+  }
+  .list-continer{
+      margin-top:50px;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+  }
+
+  .left-col{
+      flex-basis: 70%;
+
+  }
+
+  .right-col{
+      flex-basis: 25%; 
+  }
+
+  .left-col h1{
+      color: #333;
+      font-weight: 800;
+      margin-bottom: 30px;
+  }
+  
+  .house{
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   padding: 30px 0;
+   border-top: 1px solid #ccc;
+  }
+  .house-img{
+      flex-basis: 40%;
+  }
+
+  .house-info{
+      flex-basis: 58%;
+      color: #555;
+  }
+  .house-img img{
+      width: 100%;
+      border-radius: 12px;
+  }
+  .house-info h3{
+      font-weight: 600;
+      color: #333;
+      font-size: 22px;
+      margin: 4px 0;
 }
